# switchboard-plug-locale

./: .travis.yml  CMakeLists.txt  README.md  config.vala.in  meson.build
.github/workflows/: Release.yml  main.yml
data/: Plug.css  gresource.xml  io.elementary.switchboard.locale.appdata.xml  io.elementary.switchboard.locale.appdata.xml.in  io.elementary.switchboard.locale.gschema.xml  io.elementary.switchboard.locale.policy.cmake  io.elementary.switchboard.locale.policy.in  languagelist  locale.appdata.xml.in  locale.gschema.xml  locale.metainfo.xml.in  locale.policy.in  meson.build  org.pantheon.switchboard.locale.policy.cmake  packages_blacklist  packages_blocklist  pantheon-plug-locale.desktop  update-list.sh
data/schema/: org.pantheon.switchboard.plug.locale.gschema.xml
debian/: changelog  control  rules
etc/: update-list.sh
po/: LINGUAS  POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bem.po  ber.po  bg.po  bh.po  bho.po  bi.po  bm.po  bn.po  bn_IN.po  bs.po  ca.po  ckb.po  co.po  cr.po  crh.po  cs.po  csb.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  (+130 more)
po/extra/: POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bem.po  ber.po  bg.po  bh.po  bho.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  crh.po  cs.po  csb.po  cu.po  cv.po  cy.po  da.po  (+176 more)
src/: BaseEntry.vala  CMakeLists.txt  InstallEntry.vala  InstallPopover.vala  LanguageEntry.vala  LanguageInstaller.vala  LanguageList.vala  LocaleEntry.vala  LocaleManager.vala  Plug.vala  ProgressDialog.vala  Translations.vala  Utils.vala  meson.build
src/Installer/: Backend.vala  UbuntuInstaller.vala  aptd-client.vala
src/Widgets/: BaseEntry.vala  InstallDialog.vala  InstallEntry.vala  InstallInfoBar.vala  InstallPopover.vala  LanguageEntry.vala  LanguageList.vala  LanguageListBox.vala  LocaleSetting.vala  LocaleView.vala  Preview.vala
vapi/: accountsservice.vapi  polkit-gobject-1.vapi
